infra/grafana/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: "nginx"
  rules:
    - host: grafana.atreides.kr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: stable-grafana
                port:
                  name: http
  tls:
    - hosts:
        - grafana.atreides.kr
      secretName: grafana-tls
